proced update every 4 seconds

--- a/emacs.org
+++ b/emacs.org
@@ -289,7 +289,7 @@ More to do at [[https://youtu.be/PMWwM8QJAtU][here]]: dired-open
 ** Proced
 #+begin_src emacs-lisp
   (defun proced-settings ()
-      (proced-toggle-auto-update)) ;; auto update every 5 seconds
+      (proced-toggle-auto-update 4)) ;; auto update every 4 seconds
 
   (add-hook 'proced-mode-hook 'proced-settings)
 #+end_src
