readtheorg html and some keybindings

--- a/emacs.org
+++ b/emacs.org
@@ -1,7 +1,9 @@
 #+TITLE: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el :results output silent
 #+STARTUP: overview
-#+OPTIONS: toc:2
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
+#+OPTIONS: toc:2 num:nil
+
 * Setup
 ** Auto-tangle
 This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-config= gets executed each time such a buffer gets saved.  This function checks to see if the file being saved is the Emacs.org file you're looking at right now, and if so, automatically exports the configuration here to the associated output files.
@@ -421,7 +423,10 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
   (global-set-key (kbd "<f6>") 'org-insert-link)
   (global-set-key (kbd "<f7>") 'org-open-at-point)
   (global-set-key (kbd "<f8>") 'org-html-export-to-html)
+
+  ;; writing/editing
   (global-set-key (kbd "<f9>") 'ispell-word)
+  (global-set-key (kbd "<f10>") 'dictionary-lookup-definition)
 
   ;; Buffer-menu
   (define-key Buffer-menu-mode-map (kbd "C-o") 'other-window)
@@ -429,6 +434,9 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
   ;; "o" opens in another buffer and moves focus
   ;; "C-M-o" opens in another buffer and keeps focus in the Buffer-menu
   (define-key Buffer-menu-mode-map (kbd "C-M-o") 'Buffer-menu-switch-other-window)
+
+  ;; compilation
+  (define-key compilation-mode-map (kbd "C-o") 'other-window)
 #+end_src
 
 *Possible TODO:* create my own keybindings as shown [[https://www.youtube.com/watch?v=xaZMwNELaJY][here]]. hydra ties related commands into short bindings with a common prefix.
@@ -524,7 +532,6 @@ Issue: company mode not working in org-mode. Correct completion keys are not cle
 Brings up a another box with information about the highlighted recommended item in the company/lsp box.
 #+begin_src emacs-lisp
    (use-package company-box
-     :delight company-box-mode
      :hook (company-mode . company-box-mode))
 #+end_src
 
